# fast-auth

./: .gitignore  Makefile  README.rst  pyproject.toml  pyproject_bkp.toml
fast_auth/: __init__.py  database.py  migration.py  models.py  utils.py
fast_auth/auth/: auth.py  crypt.py
tests/: __init__.py  server_test.py  test_fastapi_admin.py
