[tool.poetry]
name = "fast_auth"
version = "0.1.3"
description = "Simple implementation of authentication in projects using FastAPI"
readme = "README.rst"
authors = ["Douglas de Oliveira Braga <douglasob94@gmail.com>"]
repository = "https://github.com/douglasob/fast-auth"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
python-dotenv = "^0.19.2"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.30"
python-jose = "^3.3.0"
passlib = "^1.7.4"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
blue = "^0.7.0"
pytest-asyncio = "^0.17.2"
httpx = "^0.21.3"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "fast_auth.migration:create_auth_tables_cli"
create_user = "fast_auth.auth.auth:create_user_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"